[gd_scene load_steps=13 format=2]

[ext_resource path="res://Prefabs/GlowingCube.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/DragDrop3D/Draggable.gd" type="Script" id=2]
[ext_resource path="res://materials/Green.tres" type="Material" id=3]
[ext_resource path="res://Scripts/Box.gd" type="Script" id=4]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.811765, 0.0666667, 0.0666667, 1 )
metallic = 0.68
metallic_specular = 0.74
roughness = 0.32
emission_enabled = true
emission = Color( 0.843137, 0.054902, 0.054902, 1 )
emission_energy = 1.62
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="BoxShape" id=4]
extents = Vector3( 14.687, 0.505006, 14.9899 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 30, 1, 30 )

[sub_resource type="SpatialMaterial" id=6]
vertex_color_use_as_albedo = true
roughness = 0.74

[sub_resource type="SphereShape" id=8]

[sub_resource type="SphereMesh" id=9]

[node name="Level" type="Spatial"]

[node name="Box2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.73731, 1.80564, 0 )

[node name="Box" type="RigidBody" parent="."]
transform = Transform( 0.630172, 0.588602, 0.50639, -0.683335, 0.730103, 0.00173448, -0.368696, -0.347127, 0.862303, 0, 5.28, 0 )
mass = 1000.0
gravity_scale = 1.5
can_sleep = false
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Box"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Box/CollisionShape"]
transform = Transform( 1, 0, -5.96046e-08, 2.98023e-08, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 0 )
use_in_baked_light = true
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Draggable" type="Node" parent="Box"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.170029, 0.493168, -0.853156, 0.0963896, 0.869934, 0.483656, 0.980714, 7.59668e-09, -0.19545, -9.81841, 7.39914, -3.15963 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 0.999954, -0.00954681, 0, 0.00954681, 0.999954, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
use_in_baked_light = true
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="GIProbe" type="GIProbe" parent="."]

[node name="Sphere" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.20303, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Sphere"]
transform = Transform( 0.970747, 0, 0, 0, 1, 0, 0, 0, 0.846509, 0, 0, 0 )
shape = SubResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="Sphere"]
extra_cull_margin = 176.17
use_in_baked_light = true
mesh = SubResource( 9 )
material/0 = ExtResource( 3 )
[connection signal="drag_move" from="Box/Draggable" to="Box" method="_on_Draggable_drag_move"]
[connection signal="drag_start" from="Box/Draggable" to="Box" method="_on_Draggable_drag_start"]
[connection signal="drag_stop" from="Box/Draggable" to="Box" method="_on_Draggable_drag_stop"]
